[gd_scene load_steps=30 format=1]

[ext_resource path="res://cenas/Jogo.gd" type="Script" id=1]
[ext_resource path="res://cozinha.png" type="Texture" id=2]
[ext_resource path="res://Scripts/cursor.gd" type="Script" id=3]
[ext_resource path="res://eco amarelo2 teste.png" type="Texture" id=4]
[ext_resource path="res://eco azul2 teste.png" type="Texture" id=5]
[ext_resource path="res://eco verde 2 teste.png" type="Texture" id=6]
[ext_resource path="res://lixo.png" type="Texture" id=7]
[ext_resource path="res://cenas/Cereais.tscn" type="PackedScene" id=8]
[ext_resource path="res://cenas/Banana.tscn" type="PackedScene" id=9]
[ext_resource path="res://cenas/Oleo.tscn" type="PackedScene" id=10]
[ext_resource path="res://cenas/Vidro.tscn" type="PackedScene" id=11]
[ext_resource path="res://Xerox Sans Serif Narrow.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://gameover.png" type="Texture" id=13]
[ext_resource path="res://menu.png" type="Texture" id=14]
[ext_resource path="res://Sair.jpg" type="Texture" id=15]
[ext_resource path="res://relogio.png" type="Texture" id=16]
[ext_resource path="res://ComicFont.fnt" type="BitmapFont" id=17]
[ext_resource path="res://musica.ogg" type="AudioStream" id=18]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 10, 21.8875 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="DynamicFont" id=6]

font/size = 60
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 12 )

[sub_resource type="StyleBoxFlat" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.0455933, 0.972656, 0.233903, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.953125, 0.115417, 0.115417, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=9]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="DynamicFont" id=10]

font/size = 40
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 12 )

[sub_resource type="DynamicFont" id=11]

font/size = 65
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 12 )

[node name="Jogo" type="Node"]

script/script = ExtResource( 1 )

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -1.0
margin/top = 1.0
margin/right = 899.0
margin/bottom = 601.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="Node2D" type="Node2D" parent="."]

transform/pos = Vector2( 532.293, 541.514 )
transform/scale = Vector2( 6.45117, 1.2981 )
script/script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="A" type="Sprite" parent="Node2D"]

transform/pos = Vector2( -31.6636, 12.34 )
transform/scale = Vector2( 0.145159, 0.859775 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="area_amarela" type="Area2D" parent="Node2D/A"]

transform/pos = Vector2( 0.0619863, -31.3528 )
transform/scale = Vector2( 1.00194, 0.167007 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2.60162, 0, 0, 1.9992, -0.921686, 12.9896 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/A/area_amarela"]

transform/pos = Vector2( -0.921686, 12.9896 )
transform/scale = Vector2( 2.60162, 1.9992 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Az" type="Sprite" parent="Node2D"]

transform/pos = Vector2( -21.2708, 12.1981 )
transform/scale = Vector2( 0.148085, 0.868385 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="area_azul" type="Area2D" parent="Node2D/Az"]

transform/pos = Vector2( 0, -36.701 )
transform/scale = Vector2( 1, 0.183018 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 2.79622, 0, 0, 1.47622, -0.8311, 6.1908 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Az/area_azul"]

transform/pos = Vector2( -0.8311, 6.1908 )
transform/scale = Vector2( 2.79622, 1.47622 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="V" type="Sprite" parent="Node2D"]

transform/pos = Vector2( -10.6525, 12.1244 )
transform/scale = Vector2( 0.140758, 0.870554 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="area_verde" type="Area2D" parent="Node2D/V"]

transform/pos = Vector2( 0, -36.3976 )
transform/scale = Vector2( 1, 0.156947 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 3.19293, 0, 0, 1.49254, -1.17181, 6.40308 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/V/area_verde"]

transform/pos = Vector2( -1.17181, 6.40308 )
transform/scale = Vector2( 3.19293, 1.49254 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="lixo" type="Sprite" parent="Node2D"]

transform/pos = Vector2( 0.343391, 13.126 )
transform/scale = Vector2( 0.141703, 0.874406 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="area_lixo" type="Area2D" parent="Node2D/lixo"]

transform/pos = Vector2( 3.36262, -35.4035 )
transform/scale = Vector2( 1.12572, 0.153631 )
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 3.03509, 0, 0, 1, -3.78695, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/lixo/area_lixo"]

transform/pos = Vector2( -3.78695, 0 )
transform/scale = Vector2( 3.03509, 1 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="cursor" type="Area2D" parent="Node2D"]

input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 2.1124, 0, 0, 2.72251, -15.2104, 14.8247 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/cursor"]

transform/pos = Vector2( -15.2104, 14.8247 )
transform/scale = Vector2( 2.1124, 2.72251 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="Cereais" parent="." instance=ExtResource( 8 )]

transform/pos = Vector2( 521.758, 147.709 )

[node name="Banana" parent="." instance=ExtResource( 9 )]

[node name="Oleo" parent="." instance=ExtResource( 10 )]

transform/pos = Vector2( 374.758, 164.709 )

[node name="Vidro" parent="." instance=ExtResource( 11 )]

transform/pos = Vector2( 608.758, 76.7089 )

[node name="Cereais_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = true

[node name="Banana_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="Oleo_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 6.0
one_shot = false
autostart = true

[node name="Vidro_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = true

[node name="score" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 817.0
margin/top = 27.0
margin/right = 889.0
margin/bottom = 146.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.965628, 0.980469, 0.965149, 1 )
text = "0
"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="barra_vida" type="ProgressBar" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 11.0
margin/right = 332.0
margin/bottom = 31.0
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="Gameover" type="PopupPanel" parent="."]

process/pause_mode = 2
visibility/visible = false
visibility/self_opacity = 0.83
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 0.0
margin/right = 902.0
margin/bottom = 603.0
custom_styles/panel = SubResource( 9 )
popup/exclusive = false

[node name="Sprite" type="Sprite" parent="Gameover"]

transform/pos = Vector2( 443.173, 234.746 )
transform/scale = Vector2( 0.670106, 0.675576 )
texture = ExtResource( 13 )

[node name="menu" type="Button" parent="Gameover"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 227.0
margin/top = 415.0
margin/right = 931.0
margin/bottom = 675.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 14 )
flat = false

[node name="sair" type="Button" parent="Gameover"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 551.0
margin/top = 412.0
margin/right = 644.0
margin/bottom = 501.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 15 )
flat = false

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 665.0
margin/top = 26.0
margin/right = 785.0
margin/bottom = 95.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.898438, 0.0350952, 0.0350952, 1 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_group_": true
}

[node name="relogio" type="Sprite" parent="."]

visibility/opacity = 0.3
transform/pos = Vector2( 725, 57 )
transform/scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 16 )
__meta__ = {
"_edit_group_": true
}

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 30.0
one_shot = true
autostart = true

[node name="Score" type="PopupPanel" parent="."]

process/pause_mode = 2
visibility/visible = false
visibility/self_opacity = 0.83
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 1.0
margin/right = 902.0
margin/bottom = 604.0
custom_styles/panel = SubResource( 9 )
popup/exclusive = false

[node name="menu" type="Button" parent="Score"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 228.0
margin/top = 372.0
margin/right = 932.0
margin/bottom = 632.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 14 )
flat = false
clip_text = true

[node name="score1" type="Label" parent="Score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 433.0
margin/top = 227.0
margin/right = 527.0
margin/bottom = 346.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.265195, 0.597656, 0.254471, 1 )
text = "0
"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sair" type="Button" parent="Score"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 548.0
margin/top = 366.0
margin/right = 641.0
margin/bottom = 455.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 15 )
flat = false

[node name="resultado" type="Label" parent="Score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 345.0
margin/top = 227.0
margin/right = 505.0
margin/bottom = 282.0
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_resultado" type="Label" parent="Score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 521.0
margin/top = 225.0
margin/right = 721.0
margin/bottom = 280.0
custom_fonts/font = ExtResource( 17 )
text = "pontos !!!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="mensagem" type="Label" parent="Score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 188.0
margin/top = 86.0
margin/right = 857.0
margin/bottom = 231.0
custom_fonts/font = SubResource( 11 )
text = "PaRaBeNs!!!
Complestaste o desafio com:"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Musica" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 18 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="input_event" from="Node2D/cursor" to="Node2D" method="_on_cursor_input_event"]

[connection signal="timeout" from="Cereais_timer" to="." method="_on_Cereais_timer_timeout"]

[connection signal="timeout" from="Banana_timer" to="." method="_on_Banana_timer_timeout"]

[connection signal="timeout" from="Oleo_timer" to="." method="_on_Oleo_timer_timeout"]

[connection signal="timeout" from="Vidro_timer" to="." method="_on_Vidro_timer_timeout"]

[connection signal="pressed" from="Gameover/menu" to="." method="_on_menu_pressed"]

[connection signal="pressed" from="Gameover/sair" to="." method="_on_sair_pressed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="pressed" from="Score/menu" to="." method="_on_menu_pressed"]

[connection signal="pressed" from="Score/sair" to="." method="_on_sair_pressed"]


